# cove-image-lab

./: .gitignore  CLAUDE.md  LICENSE  README.md  RELEASES.md  WORKFLOW.md  pyproject.toml
.github/workflows/: release.yml
packaging/: README.md  build-appimage.sh  build-deb.sh  build-linux.sh  cove-image-lab.desktop  cove-image-lab.iss  cove-image-lab.spec  launcher.py
src/cove_image_lab/: ai_indicator_engine.py  ai_indicator_view.py  app.py  compare_engine.py  diff_exporter.py  forensic_engine.py  forensic_view.py  help_dialog.py  image_loader.py  image_view.py  main_window.py  metadata_reader.py  redaction_view.py  theme.py  updater.py  wipe_view.py
tests/: conftest.py  test_ai_indicator_engine.py  test_ai_indicator_view.py  test_compare_engine.py  test_diff_exporter.py  test_forensic_engine.py  test_forensics_export.py  test_forensics_notes.py  test_forensics_review_report.py  test_help_content.py  test_image_loader.py  test_metadata_reader.py  test_redaction_panel.py  test_redaction_render.py  test_updater_swap.py
