[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cove-image-lab"
version = "1.1.1"
description = "Offline desktop two-image comparison and inspection tool (Cove design family)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Cove" }]
dependencies = [
    "PySide6>=6.6",
    "Pillow>=10",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
cove-image-lab = "cove_image_lab.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cove_image_lab = ["assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
